--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,16 @@
 [tool.poetry]
 name = "pyltk"
 version = "0.1.0"
-description = "NLTk toolkit using python"
-authors = ["Sleak07 <trisky650@gmail.com>"]
+description = "NLTK toolkit using python"
+authors = ["Bimal"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "3.10.8,3.11.0"
+nltk = "^3.8.1"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.2.2"
 
 [build-system]
 requires = ["poetry-core"]
